--- a/contact.html
+++ b/contact.html
@@ -45,15 +45,15 @@
     <main>
         <div class="contact-container">
             <div class="illustration">
-                <img src="./assets/Mobile.png" alt="get better wifi kid" width="800px">
+                <img src="./assets/Mobile-removebg-preview.png" alt="get better wifi kid" width="800px">
             </div>
             <div class="contact">
-                <img src="./assets/Profile.png" alt="seriously ur wifi is terrible" class="profile-contact-img">
+                <img src="./assets/Profile-removebg-preview.png" alt="seriously ur wifi is terrible" class="profile-contact-img">
                 <h1>Contact Me</h1>
                 <p>Please contact me and give me some money or any pics of you 😏</p>
                 <h4>Your Information</h4>
 
-                <form action="contact.html" autocomplete="off">
+                <form action="https://formsubmit.co/brandon.game.id@gmail.com" method="POST" autocomplete="off">
                     <div class="form-container">
                         <!-- Input Name Column -->
                         <div class="input-container">
