--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="footer.css">
     <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="about.css">
 
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -40,9 +41,52 @@
             </nav>
         </div>
     </header>
-
     <main>
+        <section id="about">
+            <div class="section-container">
+                <h2 class="section-title">About Me</h2>
+                <p class="section-subtitle">My Introduction</p>
+                <div class="about-image">
+                    <img src="assets/BlobImage.png" alt="behind you" class="blob-image">
+                </div>
+                <div class="about-description">
+                    <p>
+                    I am Brandon, 14 years old student who lives in Bandung. I started playing games ever since I was a small innocent little boy. As time went on, I started getting intrested in creating stuff. I became a fan of becoming a Youtuber and a game developer which I am now ;]. Now, I have a small Youtube channel and take coding classes regularly in Timedoors. Ty Timedoors 💖.
+                    </p>
+                    <h4>Brandon</h4>
+                </div>
+            </div>
+        </section>
 
+        <section id="skill">
+            <div class="section-container">
+                <h2 class="section-title">Skills</h2>
+                <p class="section-subtitle">My Talents</p>
+            </div>
+                <div class="skills-flex">
+                    <div class="skill-item">
+                        <img src="/assets/Youtube.png" alt="sub to my yt pwease bro">
+                        <h4>My Youtube Channel [subscribe!]</h4>
+                        <p>I've been working on my Youtube channel for about 2 months</p>
+                    </div>
+
+                    <div class="skill-item">
+                        <img src="/assets/RBXstudio.png" alt="i eat ur kids">
+                        <h4>Roblox Studio</h4>
+                        <p>I've been doing Roblox Studio for about a year</p>
+                    </div>
+                
+                    <div class="skill-item">
+                        <img src="/assets/GameDev.png" alt="better subscribe to my yt">
+                        <h4>My Timedoors Academy Experience</h4>
+                        <p>I've been doing Timedoors for more than a year</p>
+                    </div>
+                </div>
+        </section>
+
+        <section id="activity">
+    
+        </section>
     </main>
 
     <footer>
