--- a/about.html
+++ b/about.html
@@ -24,6 +24,9 @@
 
     <!-- Font Awesome Kit -->
     <script src="https://kit.fontawesome.com/03c471e0fe.js" crossorigin="anonymous"></script>
+
+    <!-- AOS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
     <!-- Header -->
@@ -65,21 +68,33 @@
             </div>
                 <div class="skills-flex">
                     <div class="skill-item">
-                        <img src="/assets/Youtube.png" alt="sub to my yt pwease bro">
-                        <h4>My Youtube Channel [subscribe!]</h4>
-                        <p>I've been working on my Youtube channel for about 2 months</p>
+                        <div class="skill-item-image" data-aos="fade-right">
+                            <img src="/assets/Youtube.png" alt="sub to my yt pwease bro">
+                        </div>
+                        <div class="skill-item-description" data-aos="fade-right">
+                            <h4>My Youtube Channel [subscribe!]</h4>
+                            <p>I've been working on my Youtube channel for about 2 months</p>
+                        </div>
                     </div>
 
                     <div class="skill-item">
-                        <img src="/assets/RBXstudio.png" alt="i eat ur kids">
-                        <h4>Roblox Studio</h4>
-                        <p>I've been doing Roblox Studio for about a year</p>
+                        <div class="skill-item-image" data-aos="fade-right">
+                            <img src="/assets/RBXstudio.png" alt="i eat ur kids">
+                        </div>
+                        <div class="skill-item-description" data-aos="fade-right">
+                            <h4>Roblox Studio</h4>
+                            <p>I've been doing Roblox Studio for about a year</p>
+                        </div>
                     </div>
                 
                     <div class="skill-item">
-                        <img src="/assets/GameDev.png" alt="better subscribe to my yt">
-                        <h4>My Timedoors Academy Experience</h4>
-                        <p>I've been doing Timedoors for more than a year</p>
+                        <div class="skill-item-image" data-aos="fade-right">
+                            <img src="/assets/GameDev.png" alt="better subscribe to my yt">
+                        </div>
+                        <div class="skill-item-description" data-aos="fade-right">
+                            <h4>My Timedoors Academy Experience</h4>
+                            <p>I've been doing Timedoors for more than a year</p>
+                        </div>
                     </div>
                 </div>
         </section>
@@ -109,5 +124,7 @@
         </div>
     </footer>
 
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
