--- a/credits.html
+++ b/credits.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="footer.css">
     <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="credit.css">
 
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -42,7 +43,13 @@
     </header>
 
     <main>
-
+        <section id="credits">
+            <div class="credit-container">
+                <div class="credit-description">
+                    <h1>Thank you Timedoors and Mr Arche for helping me make this website of mine. Appreciated 💖</h1>
+                </div>
+            </div>
+        </section>
     </main>
     
     <footer>
