--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <main>
         <section id="jumbotron">
             <div class="jumbotron">
-                <h1 class="jumbotron-title">
+                <div class="jumbotron-title">
                     <div>
                         <img src="./assets/PFP JUMBOTRON.jpg" width="700" height="auto" class="jumbotron-img" alt="ur wifi sucks">
                     </div>
@@ -60,6 +60,7 @@
                         onmouseover="changeImage(this)"
                         alt="PIC2" class="jumbotron-img2">
                     </div>
+                </div>
             </div>
         </section>
 
