--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,7 +21,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
 
-    <link class="KanitFont" href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link class="KanitFont"
+        href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
 
     <!-- Font Awesome Kit -->
     <script src="https://kit.fontawesome.com/03c471e0fe.js" crossorigin="anonymous"></script>
@@ -28,6 +31,7 @@
     <!-- AOS -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
+
 <body>
     <!-- Header -->
 
@@ -54,7 +58,10 @@
                 </div>
                 <div class="about-description">
                     <p>
-                    I am Brandon, 14 years old student who lives in Bandung. I started playing games ever since I was a small innocent little boy. As time went on, I started getting intrested in creating stuff. I became a fan of becoming a Youtuber and a game developer which I am now ;]. Now, I have a small Youtube channel and take coding classes regularly in Timedoors. Ty Timedoors 💖.
+                        I am Brandon, 14 years old student who lives in Bandung. I started playing games ever since I
+                        was a small innocent little boy. As time went on, I started getting intrested in creating stuff.
+                        I became a fan of becoming a Youtuber and a game developer which I am now ;]. Now, I have a
+                        small Youtube channel and take coding classes regularly in Timedoors. Ty Timedoors 💖.
                     </p>
                     <h4>Brandon</h4>
                 </div>
@@ -66,48 +73,48 @@
                 <h2 class="section-title">Skills</h2>
                 <p class="section-subtitle">My Talents</p>
             </div>
-                <div class="skills-flex">
-                    <div class="skill-item">
-                        <div class="skill-item-image" data-aos="fade-right">
-                            <img src="/assets/Youtube.png" alt="sub to my yt pwease bro">
-                        </div>
-                        <div class="skill-item-description" data-aos="fade-right">
-                            <h4>My Youtube Channel [subscribe!]</h4>
-                            <p>I've been working on my Youtube channel for about 2 months</p>
-                        </div>
+            <div class="skills-flex">
+                <div class="skill-item">
+                    <div class="skill-item-image" data-aos="fade-right">
+                        <img src="/assets/Youtube.png" alt="sub to my yt pwease bro">
                     </div>
-
-                    <div class="skill-item">
-                        <div class="skill-item-image" data-aos="fade-right">
-                            <img src="/assets/RBXstudio.png" alt="i eat ur kids">
-                        </div>
-                        <div class="skill-item-description" data-aos="fade-right">
-                            <h4>Roblox Studio</h4>
-                            <p>I've been doing Roblox Studio for about a year</p>
-                        </div>
-                    </div>
-                
-                    <div class="skill-item">
-                        <div class="skill-item-image" data-aos="fade-right">
-                            <img src="/assets/GameDev.png" alt="better subscribe to my yt">
-                        </div>
-                        <div class="skill-item-description" data-aos="fade-right">
-                            <h4>My Timedoors Academy Experience</h4>
-                            <p>I've been doing Timedoors for more than a year</p>
-                        </div>
+                    <div class="skill-item-description" data-aos="fade-right">
+                        <h4>My Youtube Channel [subscribe!]</h4>
+                        <p>I've been working on my Youtube channel for about 2 months</p>
                     </div>
                 </div>
+
+                <div class="skill-item">
+                    <div class="skill-item-image" data-aos="fade-right">
+                        <img src="/assets/RBXstudio.png" alt="i eat ur kids">
+                    </div>
+                    <div class="skill-item-description" data-aos="fade-right">
+                        <h4>Roblox Studio</h4>
+                        <p>I've been doing Roblox Studio for about a year</p>
+                    </div>
+                </div>
+
+                <div class="skill-item">
+                    <div class="skill-item-image" data-aos="fade-right">
+                        <img src="/assets/GameDev.png" alt="better subscribe to my yt">
+                    </div>
+                    <div class="skill-item-description" data-aos="fade-right">
+                        <h4>My Timedoors Academy Experience</h4>
+                        <p>I've been doing Timedoors for more than a year</p>
+                    </div>
+                </div>
+            </div>
         </section>
 
         <section id="activity">
-    
+
         </section>
     </main>
 
     <footer>
         <div class="main-footer">
             <h3 class="info-top">
-                To Contact Me, Click Here <i class="fa-solid fa-arrow-down"></i> 
+                To Contact Me, Click Here <i class="fa-solid fa-arrow-down"></i>
             </h3>
 
             <div class="social-media">
@@ -127,4 +134,5 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="script.js"></script>
 </body>
+
 </html>
