--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
 </head>
 
 <body>
+    <!-- Splash Image -->
+        <div class="splash">
+            <h1 class="splash-text" data-aos="fade-right" data-aos-duration="200"> Hello Guys! <br> Welcome to  the club</h1>
+            <img src="assets/astronaut1.png" alt="" class="astronaut-dabbing">
+            <img src="assets/astronaut2.png" alt="" class="astronaut-takeoff">
+        </div>
+
     <!-- Header -->
 
     <header>
