--- a/about.html
+++ b/about.html
@@ -81,6 +81,9 @@
                     <div class="skill-item-description" data-aos="fade-right">
                         <h4>My Youtube Channel [subscribe!]</h4>
                         <p>I've been working on my Youtube channel for about 2 months</p>
+                        <div>
+                            <a class="skill-item-link" href="https://www.youtube.com/@Pandaphus">Check My Youtube Channel</a>
+                        </div>
                     </div>
                 </div>
 
@@ -91,6 +94,9 @@
                     <div class="skill-item-description" data-aos="fade-right">
                         <h4>Roblox Studio</h4>
                         <p>I've been doing Roblox Studio for about a year</p>
+                        <div>
+                            <a class="skill-item-link" href="https://www.roblox.com/games/18869661344/Sky-Isle">Check My Roblox Game</a>
+                        </div>
                     </div>
                 </div>
 
@@ -101,6 +107,9 @@
                     <div class="skill-item-description" data-aos="fade-right">
                         <h4>My Timedoors Academy Experience</h4>
                         <p>I've been doing Timedoors for more than a year</p>
+                        <div>
+                            <a class="skill-item-link" href="https://brandon-platformer-game.netlify.app/">Check My Timedoors Project</a>
+                        </div>
                     </div>
                 </div>
             </div>
