--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body>
     <!-- Splash Image -->
         <div class="splash">
-            <h1 class="splash-text" data-aos="fade-right" data-aos-duration="200"> Hello Guys! <br> Welcome to  the club</h1>
+            <h1 class="splash-text" data-aos="fade-right" data-aos-duration="200"> Yo, What's Good!</h1>
             <img src="assets/astronaut1.png" alt="" class="astronaut-dabbing">
             <img src="assets/astronaut2.png" alt="" class="astronaut-takeoff">
         </div>
@@ -87,19 +87,19 @@
 
                     <div class="imghobby"><img src="./assets/hobbycard1.jpeg" alt="Card1"></div>
 
-                    <h1>I love watching anime! It's interesting and nothing like I ever watch before. 👍🏻</h1>
+                    <h1>I love watching anime 😁</h1>
                 </div>
 
                 <div class="hobbycard1">
-                    <div class="imghobby"><img src="./assets/hobbycard2.jpg" alt="Card1"></div>
+                    <div class="imghobby"><img src="./assets/TDSROBLOX.webp" alt="Card1"></div>
 
-                    <h1>I love playing Roblox in my free time. Enjoy this harmless cursed image 🗿</h1>
+                    <h1>I love playing Roblox in my free time. 🎮</h1>
                 </div>
 
                 <div class="hobbycard1">
-                    <div class="imghobby"><img src="./assets/hobbycard3.jpg" alt="Card1"></div>
+                    <div class="imghobby"><img src="./assets/NERF.jpg" alt="Card1"></div>
 
-                    <h1>If you see closely, Deadpool has a nerf gun. I love both! 🔫</h1>
+                    <h1>I love collecting Nerf Guns 🔫</h1>
                 </div>
             </div>
         </section>
@@ -126,7 +126,7 @@
     </footer>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="script js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
