--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
 
     <header>
         <div class="header">
-            <img src="./assets/picture3.jpg" alt="Icon" class="header-icon">
+            <img src="./assets/picture3.webp" alt="Icon" class="header-icon">
             <h3 class="title"><a href="">My Blog</a></h3>
 
             <nav>
@@ -54,7 +54,7 @@
                 <h2 class="section-title">About Me</h2>
                 <p class="section-subtitle">My Introduction</p>
                 <div class="about-image">
-                    <img src="assets/BlobImage.png" alt="behind you" class="blob-image">
+                    <img src="assets/BlobImage.webp" alt="behind you" class="blob-image">
                 </div>
                 <div class="about-description">
                     <p>
@@ -76,9 +76,9 @@
             <div class="skills-flex">
                 <div class="skill-item">
                     <div class="skill-item-image" data-aos="fade-right">
-                        <img src="/assets/Youtube.png" alt="sub to my yt pwease bro">
+                        <img src="/assets/Youtube.webp" alt="sub to my yt pwease bro">
                     </div>
-                    <div class="skill-item-description" data-aos="fade-right">
+                    <div class="skill-item-description" data-aos="fade-right>
                         <h4>My Youtube Channel [subscribe!]</h4>
                         <p>I've been working on my Youtube channel for about 2 months</p>
                         <div>
@@ -89,7 +89,7 @@
 
                 <div class="skill-item">
                     <div class="skill-item-image" data-aos="fade-right">
-                        <img src="/assets/RBXstudio.png" alt="i eat ur kids">
+                        <img src="/assets/RBXstudio.webp" alt="i eat ur kids">
                     </div>
                     <div class="skill-item-description" data-aos="fade-right">
                         <h4>Roblox Studio</h4>
@@ -102,7 +102,7 @@
 
                 <div class="skill-item">
                     <div class="skill-item-image" data-aos="fade-right">
-                        <img src="/assets/GameDev.png" alt="better subscribe to my yt">
+                        <img src="/assets/GameDev.webp" alt="better subscribe to my yt">
                     </div>
                     <div class="skill-item-description" data-aos="fade-right">
                         <h4>My Timedoors Academy Experience</h4>
