--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
                 <img src="./assets/Profile-removebg-preview.png" alt="seriously ur wifi is terrible"
                     class="profile-contact-img">
                 <h1>Contact Me</h1>
-                <p>Please contact me and give me some money</p>
+                <p class="contact-description ">Please contact me and give me some money</p>
                 <h4>Your Information</h4>
 
                 <form action="https://formsubmit.co/brandon.game.id@gmail.com" method="POST" autocomplete="off">
@@ -98,7 +98,7 @@
 
                     <!-- Input Messege Column -->
                     <div class="textarea-container">
-                        <div class="icon">
+                        <div class="icon-messege">
                             <i class="fas fa-comment"></i>
                         </div>
                         <div class="form-textarea">
@@ -114,7 +114,7 @@
         </div>
         <div class="modal-container">
             <div class="modal">
-                <img src="./assets/Rocket.png" alt="Rocket go boom">
+                <img src="./assets/Rocket.webp" alt="Rocket go boom">
                 <h3>Messege Sent</h3>
                 <p>Thank you for submitting!</p>
             </div>
