--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
     <!-- Splash Image -->
         <div class="splash">
             <h1 class="splash-text" data-aos="fade-right" data-aos-duration="200"> Yo, What's Good!</h1>
-            <img src="assets/astronaut1.png" alt="" class="astronaut-dabbing">
-            <img src="assets/astronaut2.png" alt="" class="astronaut-takeoff">
+            <img src="assets/astronaut1.webp" alt="" class="astronaut-dabbing">
+            <img src="assets/astronaut2.webp" alt="" class="astronaut-takeoff">
         </div>
 
     <!-- Header -->
 
     <header>
         <div class="header">
-            <img src="./assets/picture3.jpg" alt="Icon" class="header-icon">
+            <img src="./assets/picture3.webp" alt="Icon" class="header-icon">
             <h3 class="title"><a href="">My Blog</a></h3>
 
             <nav>
@@ -60,7 +60,7 @@
             <div class="jumbotron">
                 <div class="jumbotron-title">
                     <div data-aos="zoom-in-left">
-                        <img src="./assets/PFP JUMBOTRON.jpg" width="700" height="auto" class="jumbotron-img"
+                        <img src="./assets/PFP JUMBOTRON.webp" width="700" height="auto" class="jumbotron-img"
                             alt="ur wifi sucks">
                     </div>
                     <div class="header-flex">
@@ -71,21 +71,19 @@
                     </div>
 
                     <div>
-                        <img src="./assets/picture2.png" onmouseout="changeImageBack(this)"
-                            onmouseover="changeImage(this)" alt="PIC2" class="jumbotron-img2">
+                        <img src="./assets/picture2.webp" class="jumbotron-img2">
                     </div>
                 </div>
             </div>
         </section>
 
         <section id="hobby">
-            <h1
-                style="text-align: center; margin:2px; font-weight: 800; font-family: 'Orbitron', sans-serif; font-size: 40px; padding-top: 20px;">
+            <h1 class="addiction-title"">
                 -My Addiction-</h1>
             <div class="hobbycontainer">
                 <div class="hobbycard1">
 
-                    <div class="imghobby"><img src="./assets/hobbycard1.jpeg" alt="Card1"></div>
+                    <div class="imghobby"><img src="./assets/hobbycard1.webp" alt="Card1"></div>
 
                     <h1>I love watching anime 😁</h1>
                 </div>
@@ -97,7 +95,7 @@
                 </div>
 
                 <div class="hobbycard1">
-                    <div class="imghobby"><img src="./assets/NERF.jpg" alt="Card1"></div>
+                    <div class="imghobby"><img src="./assets/NERF.webp" alt="Card1"></div>
 
                     <h1>I love collecting Nerf Guns 🔫</h1>
                 </div>
