--- a/contact.html
+++ b/contact.html
@@ -34,15 +34,26 @@
 
     <header>
         <div class="header">
-            <img src="./assets/picture3.jpg" alt="Icon" class="header-icon">
+            <img src="./assets/picture3.webp" alt="Icon" class="header-icon">
             <h3 class="title"><a href="">My Blog</a></h3>
 
-            <nav>
-                <a href="/">Home</a>
-                <a href="contact.html">Contact</a>
-                <a href="about.html">About Me</a>
-                <a href="credits.html">Credits</a>
-            </nav>
+            <!-- Burger Menu Icon -->
+            <div class="burger-menu" onclick="toggleMenu()">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+
+            <!-- Navigation Links with Close Button -->
+            <div class="nav-links">
+                <button class="close-btn" onclick="toggleMenu()">X</button>
+                <nav>
+                    <a href="/">Home</a>
+                    <a href="contact.html">Contact</a>
+                    <a href="about.html">About Me</a>
+                    <a href="credits.html">Credits</a>
+                </nav>
+            </div>
         </div>
     </header>
 
@@ -52,7 +63,7 @@
                 <img src="./assets/Mobile-removebg-preview.png" alt="get better wifi kid" width="800px">
             </div>
             <div class="contact">
-                <img src="./assets/Profile-removebg-preview.png" alt="seriously ur wifi is terrible"
+                <img src="./assets/Profile-removebg-preview.webp" alt="seriously ur wifi is terrible"
                     class="profile-contact-img">
                 <h1>Contact Me</h1>
                 <p class="contact-description ">Please contact me and give me some money</p>
