--- a/about.html
+++ b/about.html
@@ -40,12 +40,23 @@
             <img src="./assets/picture3.webp" alt="Icon" class="header-icon">
             <h3 class="title"><a href="">My Blog</a></h3>
 
-            <nav>
-                <a href="/">Home</a>
-                <a href="contact.html">Contact</a>
-                <a href="about.html">About Me</a>
-                <a href="credits.html">Credits</a>
-            </nav>
+            <!-- Burger Menu Icon -->
+            <div class="burger-menu" onclick="toggleMenu()">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+
+            <!-- Navigation Links with Close Button -->
+            <div class="nav-links">
+                <button class="close-btn" onclick="toggleMenu()">X</button>
+                <nav>
+                    <a href="/">Home</a>
+                    <a href="contact.html">Contact</a>
+                    <a href="about.html">About Me</a>
+                    <a href="credits.html">Credits</a>
+                </nav>
+            </div>
         </div>
     </header>
     <main>
@@ -78,7 +89,7 @@
                     <div class="skill-item-image" data-aos="fade-right">
                         <img src="/assets/Youtube.webp" alt="sub to my yt pwease bro">
                     </div>
-                    <div class="skill-item-description" data-aos="fade-right>
+                    <div class="skill-item-description" data-aos="fade-right">
                         <h4>My Youtube Channel [subscribe!]</h4>
                         <p>I've been working on my Youtube channel for about 2 months</p>
                         <div>
